fixed layout bugg

--- a/static/style.css
+++ b/static/style.css
@@ -838,9 +838,10 @@ body {
   position: relative;
   font-family: sans-serif;
   font-size: 2vw;
+  font-weight: bold;
   color: #000000;
   text-decoration: none;
-  margin-left: 800px;
+  margin-left: 42vw;
   top: 50px;
 }
 
@@ -878,8 +879,8 @@ body {
   font-size: 1vw;
   color: #000000;
   text-decoration: none;
-  margin-left: 720px;
-  top: 180px;
+  margin-left: 37vw;
+  top: 9.2vw;
 }
 
 .option_minlen_text {
@@ -888,8 +889,8 @@ body {
   font-size: 1vw;
   color: #000000;
   text-decoration: none;
-  text-align: center;
-  top: 400px;
+  margin-left: 37vw;
+  top: 21vw;
 }
 
 #crop {
@@ -898,8 +899,8 @@ body {
   font-size: 2vw;
   color: #000000;
   text-decoration: none;
-  margin-left: 720px;
-  top: 60px;
+  margin-left: 37vw;
+  top: 2.5vw;
 }
 
 #crop_title {
@@ -908,8 +909,8 @@ body {
   font-size: 2vw;
   color: #000000;
   text-decoration: none;
-  margin-left: 720px;
-  top: 55px;
+  margin-left: 37vw;
+  top: 2vw;
 }
 
 #minlen {
@@ -918,8 +919,8 @@ body {
   font-size: 2vw;
   color: #000000;
   text-decoration: none;
-  margin-left: 720px;
-  top: 165px;
+  margin-left: 37vw;
+  top: 8.5vw;
 }
 
 #minlen_title {
@@ -928,17 +929,19 @@ body {
   font-size: 2vw;
   color: #000000;
   text-decoration: none;
-  margin-left: 720px;
-  top: 160px;
+  margin-left: 37vw;
+  top: 8vw;
 }
 
 #start_trim {
-  position: relative;
+  position: absolute;
   font-family: sans-serif;
   font-weight: bold;
   font-size: 2vw;
   color: #000000;
   text-decoration: none;
-  margin-left: 900px;
-  top: 300px;
+  top: 35vw;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  
 }
